--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.15",
     "rxjs": "~6.5.4",
     "zone.js": "~0.9.1"
   },
